
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_1__ ;


typedef int gnutls_x509_privkey_t ;
struct TYPE_7__ {int size; int data; } ;
typedef TYPE_1__ gnutls_datum_t ;


 int GCRYCTL_ENABLE_QUICK_RANDOM ;
 int GNUTLS_PK_DSA ;
 int gcry_control (int ,int ) ;
 int gnutls_free (int ) ;
 int gnutls_global_deinit () ;
 int gnutls_global_init () ;
 int gnutls_x509_privkey_deinit (int ) ;
 int gnutls_x509_privkey_export_dsa_raw (int ,TYPE_1__*,TYPE_1__*,TYPE_1__*,TYPE_1__*,TYPE_1__*) ;
 int gnutls_x509_privkey_generate (int ,int ,int,int ) ;
 int gnutls_x509_privkey_init (int *) ;
 scalar_t__ memcmp (int ,char*,int) ;
 int printf (char*) ;

int
main (void)
{
  gnutls_x509_privkey_t key;
  gnutls_datum_t p, q, g, y, x;
  int ret;

  gnutls_global_init ();
  gcry_control (GCRYCTL_ENABLE_QUICK_RANDOM, 0);

  ret = gnutls_x509_privkey_init (&key);
  if (ret < 0)
    return 1;

  ret = gnutls_x509_privkey_generate (key, GNUTLS_PK_DSA, 512, 0);
  if (ret < 0)
    return 1;

  ret = gnutls_x509_privkey_export_dsa_raw (key, &p, &q, &g, &y, &x);
  if (ret < 0)
    return 1;

  if (q.size == 3 && memcmp (q.data, "\x01\x00\x01", 3) == 0)
    printf ("buggy\n");
  else
    printf ("success!\n");

  gnutls_free (p.data);
  gnutls_free (q.data);
  gnutls_free (g.data);
  gnutls_free (y.data);
  gnutls_free (x.data);

  gnutls_x509_privkey_deinit (key);
  gnutls_global_deinit ();

  return 0;
}
